# pogl-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
image_test/: sand-texture-seamless.tga
src/: background.frag  background.vert  fragment.frag  fragment.shd  image.cc  image.cpp  image.hh  image_io.cc  image_io.cpp  image_io.hh  main.cc  main.cpp  obj.frag  obj_loader.hh  object.vert  object_vbo.hh  opengl.hh  shaders.cc  shaders.hh  texload.cc  texload.hh  vao.cc  vao.hh  vertex.shd  vertex.vert
